app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-app-service
spec:
  type: NodePort
  selector:
    app: postgres-app
  ports:
    - port: 8080
