postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # Sets service name
  labels:
    app: postgres # Labels and Selectors
spec:
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: postgres
