app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: postgres-app.info 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-app-service
            port:
              number: 8080
